[gd_scene load_steps=4 format=2]

[ext_resource path="res://gameplay/poop/carrot.png" type="Texture" id=1]
[ext_resource path="res://gameplay/poop/poop.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 180.0

[node name="poop" type="KinematicBody2D" groups=["poops"]]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 7.62939e-06 )
texture = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 3, 15 )
shape = SubResource( 1 )

[node name="ref_points" type="Node2D" parent="."]

[node name="top_point" type="Position2D" parent="ref_points"]
position = Vector2( 0, -122 )

[node name="bottom_point" type="Position2D" parent="ref_points"]
position = Vector2( 5, 114 )

[node name="collision_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="timeout" from="collision_timer" to="." method="_on_collision_timer_timeout"]
